syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blank{}

message FieldMask {
  repeated string included_fields = 1;
}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryList {
    repeated Category categories = 1;
}

message CategoryGetRequest {
    string id = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList) {}
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category) {}
    rpc ListCategories(FieldMask) returns (CategoryList) {}
    rpc GetCategory(CategoryGetRequest) returns (Category) {}
}

message Course {
    string id = 1;
    string name = 2;
    string description = 3;
    string category_id = 4; // Option 1: Use category_id to reference a Category
    //Category category = 4; // Option 2: Include the whole Category object
}

message CreateCourseRequest {
    string name = 1;
    string description = 2;
    string category_id = 3;
}

message CourseList {
    repeated Course courses = 1;
}

message CourseGetRequest {
    string id = 1;
}

service CourseService {
    rpc CreateCourse(CreateCourseRequest) returns (Course) {}
    rpc CreateCourseStream(stream CreateCourseRequest) returns (CourseList) {}
    rpc CreateCourseStreamBidirectional(stream CreateCourseRequest) returns (stream Course) {}
    rpc ListCourses(blank) returns (CourseList) {}
    rpc GetCourse(CourseGetRequest) returns (Course) {}
}